[gd_scene load_steps=8 format=2]

[ext_resource path="res://WallWicketLong.tscn" type="PackedScene" id=1]
[ext_resource path="res://Wall1RunsLong.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall6RunsLong.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wall4RunsLong.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Boundary.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Boundary" type="Node"]
script = ExtResource( 6 )

[node name="WicketStumps" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 290 )
rotation = 1.5708

[node name="1RunSquareLeg" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 16 )

[node name="4RunsFineLeg" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 110 )
rotation = 4.71239
scale = Vector2( 0.8, 1 )

[node name="4Runs3rdMan" parent="." instance=ExtResource( 4 )]
position = Vector2( 16, 480 )
rotation = 4.71239
scale = Vector2( 0.9, 1 )

[node name="1RunPoint" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 584 )
rotation = 3.14159

[node name="6RunsDownGround" parent="." instance=ExtResource( 3 )]
position = Vector2( 1008, 288 )
rotation = 1.5708
scale = Vector2( 0.7, 1 )

[node name="WicketLongOn" parent="." instance=ExtResource( 1 )]
position = Vector2( 1008, 192 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="WicketLongOff" parent="." instance=ExtResource( 1 )]
position = Vector2( 1008, 389 )
rotation = 1.5708
scale = Vector2( 0.3, 1 )

[node name="1RunCowCorner" parent="." instance=ExtResource( 2 )]
position = Vector2( 923, 16 )

[node name="4RunsMidOn" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 96 )
rotation = 1.5708
scale = Vector2( 0.65, 1 )

[node name="4RunsMidOff" parent="." instance=ExtResource( 4 )]
position = Vector2( 1008, 494 )
rotation = 1.5708
scale = Vector2( 0.75, 1 )

[node name="1RunDeepExtraCover" parent="." instance=ExtResource( 2 )]
position = Vector2( 923, 584 )
rotation = 3.14159

[node name="WicketExtraCover" parent="." instance=ExtResource( 1 )]
position = Vector2( 742, 584 )
rotation = 3.14159
scale = Vector2( 0.8, 1 )

[node name="WicketDeepMidWicket" parent="." instance=ExtResource( 1 )]
position = Vector2( 743, 15 )
scale = Vector2( 0.8, 1 )

[node name="6RunsMidWicket" parent="." instance=ExtResource( 3 )]
position = Vector2( 563, 15 )

[node name="6RunsExtraCover" parent="." instance=ExtResource( 3 )]
position = Vector2( 561, 584 )
rotation = 3.14159

[node name="4RunsCover" parent="." instance=ExtResource( 4 )]
position = Vector2( 300, 584 )
rotation = 3.14159

[node name="4RunsLegDrive" parent="." instance=ExtResource( 4 )]
position = Vector2( 300, 16 )

[node name="WicketMidWicket" parent="." instance=ExtResource( 1 )]
position = Vector2( 431, 16 )
scale = Vector2( 0.3, 1 )

[node name="WicketCover" parent="." instance=ExtResource( 1 )]
position = Vector2( 430, 584 )
rotation = 3.14159
scale = Vector2( 0.3, 1 )

[node name="WLabel" type="Label" parent="."]
margin_left = 416.0
margin_top = 8.0
margin_right = 456.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel2" type="Label" parent="."]
margin_left = 8.0
margin_top = 280.0
margin_right = 48.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel3" type="Label" parent="."]
margin_left = 416.0
margin_top = 576.0
margin_right = 456.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel4" type="Label" parent="."]
margin_left = 736.0
margin_top = 8.0
margin_right = 776.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel5" type="Label" parent="."]
margin_left = 736.0
margin_top = 576.0
margin_right = 776.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel6" type="Label" parent="."]
margin_left = 1000.0
margin_top = 184.0
margin_right = 1040.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="WLabel7" type="Label" parent="."]
margin_left = 1000.0
margin_top = 384.0
margin_right = 1040.0
margin_bottom = 404.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "W"

[node name="1Label" type="Label" parent="."]
margin_left = 88.0
margin_top = 8.0
margin_right = 128.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="1Label2" type="Label" parent="."]
margin_left = 88.0
margin_top = 576.0
margin_right = 128.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="1Label3" type="Label" parent="."]
margin_left = 920.0
margin_top = 8.0
margin_right = 960.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="1Label4" type="Label" parent="."]
margin_left = 920.0
margin_top = 576.0
margin_right = 960.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="4Label" type="Label" parent="."]
margin_left = 8.0
margin_top = 96.0
margin_right = 48.0
margin_bottom = 116.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="4Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 472.0
margin_right = 48.0
margin_bottom = 492.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="4Label3" type="Label" parent="."]
margin_left = 296.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="4Label4" type="Label" parent="."]
margin_left = 296.0
margin_top = 576.0
margin_right = 336.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="4Label5" type="Label" parent="."]
margin_left = 1000.0
margin_top = 88.0
margin_right = 1040.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="4Label6" type="Label" parent="."]
margin_left = 1000.0
margin_top = 488.0
margin_right = 1040.0
margin_bottom = 508.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "4"

[node name="6Label" type="Label" parent="."]
margin_left = 560.0
margin_top = 8.0
margin_right = 600.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="6Label2" type="Label" parent="."]
margin_left = 560.0
margin_top = 576.0
margin_right = 600.0
margin_bottom = 596.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "6"

[node name="6Label3" type="Label" parent="."]
margin_left = 1000.0
margin_top = 280.0
margin_right = 1040.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 24, 104 )
custom_fonts/font = SubResource( 1 )
text = "6"

[connection signal="wicket" from="WicketStumps" to="." method="_on_WallWicketLong_wicket"]
[connection signal="runs_1" from="1RunSquareLeg" to="." method="_on_1RunSquareLeg_runs_1"]
[connection signal="runs_4" from="4RunsFineLeg" to="." method="_on_4RunsFineLeg_runs_4"]
[connection signal="runs_4" from="4Runs3rdMan" to="." method="_on_4Runs3rdMan_runs_4"]
[connection signal="runs_1" from="1RunPoint" to="." method="_on_1RunPoint_runs_1"]
[connection signal="runs_6" from="6RunsDownGround" to="." method="_on_6RunsDownGround_runs_6"]
[connection signal="wicket" from="WicketLongOn" to="." method="_on_WicketLongOn_wicket"]
[connection signal="wicket" from="WicketLongOff" to="." method="_on_WicketLongOff_wicket"]
[connection signal="runs_1" from="1RunCowCorner" to="." method="_on_1RunCowCorner_runs_1"]
[connection signal="runs_4" from="4RunsMidOn" to="." method="_on_4RunsMidOn_runs_4"]
[connection signal="runs_4" from="4RunsMidOff" to="." method="_on_4RunsMidOff_runs_4"]
[connection signal="runs_1" from="1RunDeepExtraCover" to="." method="_on_1RunDeepExtraCover_runs_1"]
[connection signal="wicket" from="WicketExtraCover" to="." method="_on_WicketExtraCover_wicket"]
[connection signal="wicket" from="WicketDeepMidWicket" to="." method="_on_WicketDeepMidWicket_wicket"]
[connection signal="runs_6" from="6RunsMidWicket" to="." method="_on_6RunsMidWicket_runs_6"]
[connection signal="runs_6" from="6RunsExtraCover" to="." method="_on_6RunsExtraCover_runs_6"]
[connection signal="runs_4" from="4RunsCover" to="." method="_on_4RunsCover_runs_4"]
[connection signal="runs_4" from="4RunsLegDrive" to="." method="_on_4RunsLegDrive_runs_4"]
[connection signal="wicket" from="WicketMidWicket" to="." method="_on_WicketMidWicket_wicket"]
[connection signal="wicket" from="WicketCover" to="." method="_on_WicketCover_wicket"]
